# LLMTerminal

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.json  demo.py  fetch_models.ps1  main.py  requirements.txt  run.bat  run.ps1  setup.bat  setup.ps1  test_app.py  update_models.ps1
models/: openai_models.txt
src/: config.rs  llm.rs  main.rs  models.rs
