[package]
name = "LLMTerminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
crossterm = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getopts = "0.2"
async-trait = "0.1"
