[package]
name = "LLMTerminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow", "persistence"] }
pollster = "0.3"
